Improve ArtifactoryPermissionsUpdater into java class conversation and handle spotbugs